--- a/zh/preview/record.html
+++ b/zh/preview/record.html
@@ -16,12 +16,7 @@
     <link rel="modulepreload" href="/assets/chunks/createLucideIcon.BtSjJR7l.js">
     <link rel="modulepreload" href="/assets/zh_preview_record.md.b_zfc1DT.lean.js">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SEWZ8WZX0C"></script>
-    <script innerHTML="
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'G-SEWZ8WZX0C');
-        "></script>
+    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag("js",new Date),gtag("config","G-SEWZ8WZX0C");</script>
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
     <script id="check-mac-os">document.documentElement.classList.toggle("mac",/Mac|iPhone|iPod|iPad/i.test(navigator.platform));</script>
   </head>
